# src/main/resources/openapi.yaml
@@ -719,6 +719,30 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/User"
+  /user/changePassword:
+    post:
+      tags:
+        - "changePassword"
+      summary: "change Password"
+      operationId: "changePassword"
+      parameters:
+        - in: header
+          name: Authorization
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ChangePassword"
+      responses:
+        "200":
+          description: "MessageResponse"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MessageResponse"
   /lead:
     post:
       tags:
@@ -1759,6 +1783,17 @@ components:
           items:
             type: string
           example: ['admin', 'agent', 'agency', 'owner', 'user']
+    ChangePassword:
+      type: "object"
+      required:
+        - username
+        - password
+      properties:
+        username:
+          type: "string"
+        password:
+          type: "string"
+          description: "Password"
     Lead:
       type: "object"
       required:
